name:                fixator
version:             0.1.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/axt-time-manager-fixator-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                        Database.Types
                        Database.Interface
  build-depends:
                        base >= 4.7 && < 5,
                        bytestring,
                        opaleye,
                        lens,
                        postgresql-simple,
                        product-profunctors
  default-language:    Haskell2010

executable fixator
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:        ax-configs,
                        base,
                        base-unicode-symbols,
                        bytestring,
                        lens,
                        fixator,
                        opaleye,
                        postgresql-simple,
                        time,
                        yaml
  default-language:    Haskell2010

test-suite fixator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fixator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/axt-time-manager-fixator-haskell
